fixing the comments

--- a/MemeMe/Info.plist
+++ b/MemeMe/Info.plist
@@ -62,5 +62,9 @@
 	</array>
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>For test</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>For test</string>
+	<key>NSCameraUsageDescription</key>
+	<string>For test</string>
 </dict>
 </plist>
